sqlserver-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mssql
  labels:
    app: mssql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          #image: mcr.microsoft.com/mssql/server:2019-CTP3.2-ubuntu
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - name: mssql
              containerPort: 1433
          volumeMounts:
            - name: mssql-persistent-storage
              mountPath: /var/opt/mssql
      volumes:
        - name: mssql-persistent-storage
          gcePersistentDisk:
            pdName: swing-mssql
            fsType: ext4
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: NodePort
