swing.yaml
apiVersion: v1
kind: Service
metadata:
  name: sservice
  labels:
    app: sservice
spec:
  ports:
  - port: 80
    targetPort: 8000
    name: http
  selector:
    app: sservice
  type:
    #LoadBalancer  
    NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sservice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sservice
        version: v1
    spec:
      containers:
      - name: sservice
        image: gcr.io/formal-guru-247103/sservice
        imagePullPolicy: "Always"
        volumeMounts:
        - name: secret
          mountPath: /etc/secret
        ports:
        - containerPort: 8000
      volumes:
        - name: secret
          secret:
            secretName: test-secret
---
apiVersion: v1
kind: Service
metadata:
  name: smanager
  labels:
    app: smanager
spec:
  ports:
  - port: 80
    targetPort: 8100
    name: http
  selector:
    app: smanager
  type:
    #LoadBalancer  
    NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: smanager
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: smanager
        version: v1
    spec:
      containers:
      - name: smanager
        image: gcr.io/formal-guru-247103/smanager
        imagePullPolicy: "Always"
        volumeMounts:
        - name: secret
          mountPath: /etc/secret
        ports:
        - containerPort: 8100
      volumes:
        - name: secret
          secret:
            secretName: test-secret
