swing-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: swing-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: swing-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - swing-gateway
  http:
  - route:
    - destination:
        host: swing-service

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: hr--gateway-service-disable-mtls
spec:
    host: hr--gateway-service.default.svc.cluster.local
    trafficPolicy:
    tls:
        mode: DISABLE
