swing-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: swing-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "swing-static-ip"
spec:
  rules:
  - host: sw.shotel.vn
    http:
      paths:
      - backend:
          serviceName: sservice
          servicePort: 80
  - host: api.shotel.vn
    http:
      paths:
      - backend:
          serviceName: smanager
          servicePort: 80

---
